[package]
name = "off-chain-ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv-async = { version = "1.3.0", features = ["tokio", "tokio-stream"]}
either = "1.11.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.198", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs", "io-util"] }
